@@ -9,7 +9,7 @@ compute rejection bounds for z-scores of each elementary hypotheses
 within each intersection hypotheses 
 }
 \usage{
-generateBounds(g, w, cr, al = 0.05, hint = generateWeights(g, w))
+generateBounds(g, w, cr, al = 0.05, hint = generateWeights(g, w),exhaust=F)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -25,7 +25,7 @@ generateBounds(g, w, cr, al = 0.05, hint = generateWeights(g, w))
 }
   \item{cr}{
     correlation matrix defining pairwise correlations between the
-    elementary hypotheses. Unknown values can be set to NA. (See details
+    elementary hypotheses. Unknown values can be set to \code{NA}. (See details
     for more information)
 }
   \item{al}{
@@ -35,7 +35,11 @@ generateBounds(g, w, cr, al = 0.05, hint = generateWeights(g, w))
     if intersection hypotheses weights have already been computed
     (output of \code{\link{generateWeights}}) can be passed here
     otherwise will be computed during execution
-}
+  }
+  \item{exhaust}{
+    if \code{FALSE} (default) the parametric test is performed at the reduced
+    level alpha of sum(w)*alpha. (See details)
+  }
 }
 \details{
   The correlation has to be passed as a numeric matrix with elements of
@@ -47,6 +51,19 @@ generateBounds(g, w, cr, al = 0.05, hint = generateWeights(g, w))
   cor(i,j), and cor(i,j') for i!=j!=j' are known than cor(j,j') has to
   be known as well) otherwise multcomp will throw an exception as NA
   correlations are fed to the multivariate normal distribution
+
+  The paramtric tests in (Bretz et al. (2011)) are defined such that the
+  tests of intersection null hypotheses always exhaust the full alpha
+  level even if the sum of weights is strictly smaller than one. This
+  has the consequence that certain test procedures that do not test each
+  intersection null hypothesis at the full level alpha may not be
+  implemented (e.g., a single step Dunnett test). If \code{exhaust} is
+  set to \code{FALSE} (default) the parametric tests are performed at a
+  reduced level 
+  alpha of sum(w) * alpha and p-values adjusted accordingly such that
+  test procedures with non-exhaustive weighting strategies may be
+  implemented. If set to \code{TRUE} the tests are performed as defined
+  in Equation (3) of (Bretz et al. (2011)).
 }
 \value{
   Returns a matrix of rejection bounds. Each row corresponds to an intersection
