@@ -6,6 +6,8 @@ Version 0.7-9 (??-03-2012, Rev. 12??)
 
 - Show syntax error instead of infinite loop if an unparseable edge weight is entered. 
 
+- Add option to allow non-alpha-exhaustive parametric tests 
+
 Version 0.7-8 (06-03-2012, Rev. 1252)
 =====================================
 
